<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GolfScore</string>
    <string name="action_settings">setting</string>
    <string name="login_text">登录</string>
	<string name="username">请输入用户名</string>
	<string name="password">请输入密码</string>
	<string name="login_bt">登 录</string>
	<string name="desc">title背景</string>
	<string name="choose">选择球洞</string>
	<string name="admin">超级管理员</string>
	<string name="group">设置组号</string>
	<string name="current">当前所在位置:</string>
	<string name="holename">号洞</string>
	<string name="back">返回</string>
	<string name="exit">退出</string>
	<string name="cancel">取消</string>
	<string name="sure">确 定</string>
	<string name="h1">1</string>
	<string name="h2">2</string>
	<string name="h3">3</string>
	<string name="h4">4</string>
	<string name="h5">5</string>
	<string name="h6">6</string>
	<string name="h7">7</string>
	<string name="h8">8</string>
	<string name="h9">9</string>
	<string name="h10">10</string>
	<string name="h11">11</string>
	<string name="h12">12</string>
	<string name="h13">13</string>
	<string name="h14">14</string>
	<string name="h15">15</string>
	<string name="h16">16</string>
	<string name="h17">17</string>
	<string name="h18">18</string>
	<string name="group_num">请输入组号</string>
	<string name="submit">提交</string>
	<string name="score_tip">点击输入成绩</string>
</resources>