<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="88px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/topbg" >

        <Button
            android:id="@+id/back_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10px"
            android:background="@drawable/top_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:shadowColor="#21591c"
            android:shadowRadius="3"
            android:text="@string/choose"
            android:textColor="#FFFFFF"
            android:textSize="34px" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_bt"
            android:layout_marginLeft="10px"
            android:layout_toRightOf="@+id/back_bt"
            android:background="@null"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="30px" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:shadowColor="#21591c"
            android:shadowRadius="3"
            android:text="@string/admin"
            android:textColor="#FFFFFF"
            android:textSize="22px" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_gravity="center"
        android:layout_marginLeft="20px"
        android:layout_marginTop="40px" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/hb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h1" />

                <Button
                    android:id="@+id/hb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h2" />

                <Button
                    android:id="@+id/hb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h3" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36px" >

                <Button
                    android:id="@+id/hb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h4" />

                <Button
                    android:id="@+id/hb5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h5" />

                <Button
                    android:id="@+id/hb6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h6" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36px" >

                <Button
                    android:id="@+id/hb7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h7" />

                <Button
                    android:id="@+id/hb8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h8" />

                <Button
                    android:id="@+id/hb9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h9" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36px" >

                <Button
                    android:id="@+id/hb10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h10" />

                <Button
                    android:id="@+id/hb11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h11" />

                <Button
                    android:id="@+id/hb12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h12" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36px" >

                <Button
                    android:id="@+id/hb13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h13" />

                <Button
                    android:id="@+id/hb14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h14" />

                <Button
                    android:id="@+id/hb15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h15" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36px" >

                <Button
                    android:id="@+id/hb16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h16" />

                <Button
                    android:id="@+id/hb17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h17" />

                <Button
                    android:id="@+id/hb18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36px"
                    android:background="@drawable/admin_selector"
                    android:text="@string/h18" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>