<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:src="@drawable/bg"
         >

        <Button
            android:id="@+id/groupBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:text="@string/group" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/match_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="10" />

        <TextView
            android:id="@+id/hole_info"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:ems="10" />

        <EditText
            android:id="@+id/group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/group_num"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/sure_group"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure" />
        
    </LinearLayout>

</RelativeLayout>