<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:background="@drawable/topbg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:shadowColor="#21591c"
            android:shadowRadius="3"
            android:text="@string/login_text"
            android:textColor="#ffffff"
            android:textSize="36px" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/textbox" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_user" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/textbox_line" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/username"
                android:textColor="@color/edit_color"
                android:textColorHint="@color/hint_color"
                android:textSize="28px" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox" >

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon_unlocked" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/textbox_line" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_color"
                android:textColorHint="@color/hint_color"
                android:textSize="28px" />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="500dp"
            android:layout_height="88dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_selector"
            android:gravity="center"
            android:text="@string/login_bt" />

        <TextView
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:text="" />
    </LinearLayout>

</RelativeLayout>